# scm

./: .gitignore  Cargo.toml  README.md  integration_tests.sh  todo
.github/workflows/: rust.yml
src/: app.rs  args.rs  file_ops.rs  hooks.rs  main.rs  runner.rs  settings.rs
test/integration_tests/: test_install_vim_simulate_target.sh  test_install_vim_tags.sh  test_install_vim_target.sh  test_install_zsh_target.sh  test_uninstall_vim_simulate_target.sh  test_uninstall_vim_tags.sh  test_uninstall_vim_target.sh  test_uninstall_vim_zsh_target.sh
test/repo-target/: settings.toml
test/repo-target/zsh/: settings.toml
