[package]
name = "scm"
version = "0.0.1"
authors = ["Edd Salkield <edd@salkield.uk>"]
description = "A fast, stable, and portable configuration manager written in Rust"
homepage = "https://github.com/eddsalkield/scm"
repository = "https://github.com/eddsalkield/scm"
readme = "README.md"
keywords = ["dotfiles"]
license = "GPL-3.0"
categories = ["command-line-utilities", "config"]

[dependencies]
clap = "2.26.0"
sys-info = "0.5.1"

[badges]
travis-ci = { repository = "swalladge/dotfiles-manager", branch = "master" }
coveralls = { repository = "swalladge/dotfiles-manager", branch = "master" }
