[package]
name = "scm"
version = "0.0.3"
authors = ["Edd Salkield <edd@salkield.uk>"]
description = "A fast, stable, and portable configuration manager written in Rust"
homepage = "https://github.com/eddsalkield/scm"
repository = "https://github.com/eddsalkield/scm"
readme = "README.md"
keywords = ["dotfiles"]
license = "GPL-3.0"
categories = ["command-line-utilities", "config"]

[dependencies]
clap = "2.26.0"
sys-info = "0.5.1"
dirs = "2.0.2"
toml = "0.5.6"
regex = "1.3.3"
serde = { version = "1.0.104", features = ["derive"] }

[badges]
travis-ci = { repository = "swalladge/dotfiles-manager", branch = "master" }
coveralls = { repository = "swalladge/dotfiles-manager", branch = "master" }

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
scm = { path = "/usr/bin/scm" }
